--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ subjects:
 - !lcc 'PZ'
 - !lcsh 'Mystery fiction'
 - !lcsh 'Motherless families -- Juvenile fiction'
+- GITenberg
 title: The Girls of Hillcrest Farm; Or, The Secret of the Rocks
 url: http://www.gutenberg.org/ebooks/32401
